Fix whitespace in code/pre blocks

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,7 +221,7 @@ h6 {
 
 h1, h2, h3, h4, h5, h6 {
     margin: 0;
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'Noto Sans', 'PT Sans', sans-serif;
 }
 
 p a,
@@ -266,7 +266,7 @@ code {
     font-family: 'Noto Sans Mono', Consolas, 'Courier New', Courier, monospace;
     display: inline-block;
     overflow: auto !important;
-    white-space: pre-line !important;
+    white-space: line !important;
     word-wrap: break-word !important;
     padding: 2px 2px  2px 2px;
     vertical-align:middle;
@@ -294,7 +294,7 @@ pre code {
     font-family: 'Noto Sans Mono', Consolas, 'Courier New', Courier, monospace;
     display: inline-block;
     overflow: auto !important;
-    white-space: pre-line !important;
+    white-space: line !important;
     word-wrap: break-word !important;
     padding: 15px 15px  15px 15px;
     vertical-align:middle;
